# pqvault-rs

./: .dockerignore  .gitguardian.yml  .gitignore  Cargo.toml  Dockerfile  Dockerfile.web  README.md  bskiller-growth.db  bskiller-growth.db-shm  bskiller-growth.db-wal  bskiller-scraper.db-shm  bskiller-scraper.db-wal  cloudbuild-web.yaml  cloudbuild.yaml  server.json
crates/pqvault-cli/: Cargo.toml
crates/pqvault-cli/src/: main.rs
crates/pqvault-connector/: Cargo.toml
crates/pqvault-connector/src/: main.rs
crates/pqvault-core/: Cargo.toml
crates/pqvault-core/src/: agent.rs  audit.rs  env_gen.rs  health.rs  keychain.rs  lib.rs  models.rs  providers.rs  proxy.rs  search.rs  smart.rs  vault.rs
crates/pqvault-env-mcp/: Cargo.toml
crates/pqvault-env-mcp/src/: main.rs
crates/pqvault-health-mcp/: Cargo.toml
crates/pqvault-health-mcp/src/: main.rs
crates/pqvault-mcp/: Cargo.toml
crates/pqvault-mcp/src/: main.rs
crates/pqvault-proxy-mcp/: Cargo.toml
crates/pqvault-proxy-mcp/src/: main.rs
crates/pqvault-unified/: Cargo.toml
crates/pqvault-unified/src/: lib.rs  main.rs
crates/pqvault-web/: Cargo.toml
crates/pqvault-web/src/: auth.rs  main.rs  web.rs
crates/pqvault-web/static/: index.html  login.html
docs/: ARCHITECTURE.md  AUDIT.md  PRODUCT_ROADMAP.md  REFERENCE.md
docs/features/: 001-web-ui-authentication.md  002-pqvault-run.md  003-env-file-import.md  004-encrypted-audit-log.md  005-encrypted-usage-data.md  006-secret-scanner.md  007-shell-completions.md  008-export-secrets.md  009-separate-web-ui-files.md  010-file-watch-vault-reload.md  011-auto-rotation-engine.md  012-rotation-policies.md  013-pre-rotation-testing.md  014-rotation-rollback.md  015-key-retirement-workflow.md  016-expiry-enforcement.md  017-secret-versioning.md  018-dual-write-rotation.md  019-rotation-scheduling.md  020-bulk-emergency-rotate.md  021-agent-scoped-tokens.md  022-per-agent-budget-caps.md  023-cost-circuit-breaker.md  024-session-based-access.md  025-usage-attribution-dashboard.md  026-jit-decryption.md  027-agent-sandboxing-levels.md  028-multi-agent-key-locking.md  029-natural-language-search.md  030-key-recommendation.md  031-realtime-usage-dashboard.md  032-anomaly-detection.md  033-cost-forecasting.md  034-provider-health-monitoring.md  035-key-health-score.md  036-dead-key-detection.md  037-duplicate-key-detection.md  038-alert-rules-engine.md  039-weekly-digest-report.md  040-grafana-prometheus-export.md  (+60 more)
npm/: README.md  install.js  package.json  run.js
src/: audit.rs  crypto.rs  env_gen.rs  keychain.rs  lib.rs  main.rs  mcp.rs  models.rs  providers.rs  proxy.rs  smart.rs  vault.rs  web.rs
tests/: stress_tests.rs
