[package]
name = "pqvault"
version = "2.0.0"
edition = "2021"
description = "Quantum-proof centralized secrets management with MCP server"

[dependencies]
# MCP Server
rmcp = { version = "1.1", features = ["server", "macros", "transport-io", "schemars"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "sync", "fs"] }
schemars = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Crypto
ml-kem = "0.2"
kem = "0.3.0-pre.0"
x25519-dalek = { version = "2", features = ["static_secrets"] }
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
scrypt = "0.11"
rand = "0.8"

# macOS Keychain
keyring = { version = "3", features = ["apple-native"] }

# CLI
clap = { version = "4", features = ["derive"] }

# HTTP Proxy
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
url = "2"
base64 = "0.22"

# Web UI
axum = "0.8"
tower = "0.5"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
dirs = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"

[dev-dependencies]
tempfile = "3"
