[workspace]
resolver = "2"
members = [
    "crates/pqvault-core",
    "crates/pqvault-mcp",
    "crates/pqvault-proxy-mcp",
    "crates/pqvault-health-mcp",
    "crates/pqvault-env-mcp",
    "crates/pqvault-cli",
    "crates/pqvault-web",
]

[workspace.package]
version = "2.1.0"
edition = "2021"

[workspace.dependencies]
# Core
pqvault-core = { path = "crates/pqvault-core" }

# MCP Server
rmcp = { version = "1.1", features = ["server", "macros", "transport-io", "schemars"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "sync", "fs"] }
schemars = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Crypto
ml-kem = "0.2"
kem = "0.3.0-pre.0"
x25519-dalek = { version = "2", features = ["static_secrets"] }
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
scrypt = "0.11"
rand = "0.8"

# macOS Keychain
keyring = { version = "3", features = ["apple-native"] }

# CLI
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

# HTTP
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
url = "2"
base64 = "0.22"

# Web
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"

# File watching
notify = "6"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
dirs = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"

# Dev
tempfile = "3"
