[package]
name = "pqvault-core"
version.workspace = true
edition.workspace = true
description = "PQVault core library: vault operations, hybrid PQ encryption, models, keychain, providers"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
ml-kem = { workspace = true }
kem = { workspace = true }
x25519-dalek = { workspace = true }
aes-gcm = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }
scrypt = { workspace = true }
rand = { workspace = true }
keyring = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
dirs = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
