[package]
name = "pqvault-proxy-mcp"
version.workspace = true
edition.workspace = true
description = "PQVault proxy MCP server: zero-knowledge API proxy with SSRF protection"

[[bin]]
name = "pqvault-proxy-mcp"
path = "src/main.rs"

[dependencies]
pqvault-core = { workspace = true }
rmcp = { workspace = true }
tokio = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
