[package]
name = "pqvault-unified"
version.workspace = true
edition.workspace = true
description = "PQVault unified MCP: all 14 vault tools in a single server"

[lib]
name = "pqvault_unified"
path = "src/lib.rs"

[[bin]]
name = "pqvault-unified"
path = "src/main.rs"

[dependencies]
pqvault-core = { workspace = true }
rmcp = { workspace = true }
tokio = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
